[package]
name = "exec_test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exec_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = {path="../../../michal_solana/solana/sdk/program", version="1.17.0"}
light-merkle-tree = {git="https://github.com/Lightprotocol/light-merkle-tree", rev="bbf12361cbd44b0a0a19c59094aefc86edac4238", features= ["solana"]}
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
getrandom = { version = "0.2.2", features = ["custom"] }
