[package]
name = "exec_test"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exec_test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = {path="../../../solana/sdk/program", version="1.17.0"}
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
getrandom = { version = "0.2.2", features = ["custom"] }
groth16-solana = "0.0.2"
ark-serialize = "0.4.2"
